# learn-openmp

./: .gitignore  README.md
atomic/: CMakeLists.txt  README.md  main.cpp
cmake_example/: CMakeLists.txt  README.md  main.cpp
condiction_of_openmp/: CMakeLists.txt  README.md  main.cpp
custom_reduction/: CMakeLists.txt  README.md  main.cpp
master/: CMakeLists.txt  README.md  main.cpp
parallel_for/: CMakeLists.txt  README.md  main.cpp
reduction/: CMakeLists.txt  README.md  main.cpp
reduction_by_hand/: CMakeLists.txt  README.md  main.cpp
use_openmp_newversion_on_windows/: CMakeLists.txt  README.md
user_openmp_newversion_on_windows/: README.md  main.cpp
